BuildImport API
Any CI system can build docker image and pipe the archived artifact to
datacol build to create a new build.
