# cloud/provider.go
@@ -21,7 +21,8 @@ type Provider interface {
 	EnvironmentSet(app string, body io.Reader) error
 
 	BuildCreate(app string, req *pb.CreateBuildOptions) (*pb.Build, error)
-	BuildImport(app, filename string) error
+	BuildUpload(app, filename string) error
+	BuildImport(app string, r io.Reader, w io.WriteCloser) error
 	BuildList(app string, limit int64) (pb.Builds, error)
 	BuildGet(app, id string) (*pb.Build, error)
 	BuildDelete(app, id string) error
